<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#FFF">

        <!-- Image View -->
        <ImageView
            android:layout_width="247dp"
            android:layout_height="238dp"
            android:layout_gravity="center"
            android:contentDescription="@string/des_image"
            android:src="@drawable/logo"
            android:layout_marginTop="50dp"/>

        <!-- Title Text -->
        <TextView
            android:id="@+id/tvRegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingTop="16dp" />

        <!-- Description Text -->
        <TextView
            android:id="@+id/tvRegisterDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:paddingTop="8dp" />

        <!-- Username Input -->
        <EditText
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@color/hijau"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"
            android:padding="12dp" />

        <!-- Account Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_gravity="center"
            android:paddingTop="16dp" />

        <!-- Login Link -->
        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:paddingTop="4dp" />

        <!-- ContentLoadingProgressBar (Indikator Loading) -->
        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:indeterminate="true" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
