<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.skinaliyze.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.capstone.skinaliyze.ui.camera.CameraFragment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.skinaliyze.ui.profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />
</navigation>